--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
 
 <script>
 
+document.getElementById('play1').play();
+document.getElementById('play1').pause();
+document.getElementById('play2').play();
+document.getElementById('play2').pause();	
+	
 var blocky =
 
           ['XXXX    '
