--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@ var blocky =
 
 	    dt = dt/3;
 		x += dx * dt;
+		screen();
 		reset_collision();
 	  
 	    background(0, SCREEN_Y, color_bk1);
