--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 
 function setSource() {
   var sound1 = document.getElementById('play1');
+  var sound2 = document.getElementById('play2');
   sound1.src = "blip.wav";
+  sound2.src = "crash.wav";
 }
 
 function mediaPlaybackRequiresUserGesture() {
