--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@ function mediaPlaybackRequiresUserGesture() {
 
 function removeBehaviorsRestrictions() {
   var sound1 = document.getElementById('play1');
+  var sound2 = document.getElementById('play2');
   sound1.load();
+  sound2.load();
   window.removeEventListener('keydown', removeBehaviorsRestrictions);
   window.removeEventListener('mousedown', removeBehaviorsRestrictions);
   window.removeEventListener('touchstart', removeBehaviorsRestrictions);
