--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     </style>
 </head>
 <body>
-<audio controls id="play1" src="blip.wav" type="audio/wav"></audio>
-<audio controls id="play2" src="crash.wav" type="audio/wav"></audio>
+<audio id="play1" src="blip.wav" type="audio/wav"></audio>
+<audio id="play2" src="crash.wav" type="audio/wav"></audio>
 
 <canvas id="myCanvas" width="640" height="416"></canvas>
 
