--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
 <script>
 
 // create web audio api context
-var audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+//var audioCtx = new (window.AudioContext || window.webkitAudioContext)();
 
 // create Oscillator node
-var oscillator = audioCtx.createOscillator();
+//var oscillator = audioCtx.createOscillator();
 
-oscillator.type = 'square';
-oscillator.frequency.value = 440; // value in hertz
-oscillator.connect(audioCtx.destination);
-oscillator.start();
+//oscillator.type = 'square';
+//oscillator.frequency.value = 440; // value in hertz
+//oscillator.connect(audioCtx.destination);
+//oscillator.start();
 
 	
 function setSource() {
