--- a/index.html
+++ b/index.html
@@ -74,47 +74,49 @@ var blocky =
 
 	var jumping = 0 ;
 
+	var sound_duration = 0;
 
+
+	// create web audio api context
+	var audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+
+	var oscillator;
+	var gain;
+
+		oscillator = audioCtx.createOscillator();
+		gain = audioCtx.createGain();
+
+		oscillator.type = 'square';
+		gain.gain.value = 0.0;
+		
+		oscillator.frequency.value = 440; // value in hertz
+		oscillator.connect(gain);
+		gain.connect(audioCtx.destination);
+
+		oscillator.start(0);
 
 	function playSound (snum) {
 	  if (snum == 1){
-		// create web audio api context
-		var audioCtx1 = new (window.AudioContext || window.webkitAudioContext)();
 
-		// create Oscillator node
-		var oscillator1 = audioCtx1.createOscillator();
-		var gain1 = audioCtx1.createGain();
 
-		oscillator1.type = 'square';
-		oscillator1.frequency.value = 440; // value in hertz
-		gain1.gain.value = 0.3;
-
-		oscillator1.connect(gain1);
-		gain1.connect(audioCtx1.destination);
-
-		oscillator1.start(0);
-		oscillator1.stop(0.1);
+	  	oscillator.frequency.value = 440; // value in hertz
+	  	gain.gain.value = 0.3;
+		
 
 	  }
 	  if (snum == 2){
-		// create web audio api context
-		var audioCtx2 = new (window.AudioContext || window.webkitAudioContext)();
 
-		// create Oscillator node
-		var oscillator2 = audioCtx2.createOscillator();
-		var gain2 = audioCtx2.createGain();
 
-		oscillator2.type = 'square';
-		oscillator2.frequency.value = 44; // value in hertz
-		gain2.gain.value = 0.3;
 
-		oscillator2.connect(gain2);
-		gain2.connect(audioCtx2.destination);
-
-		oscillator2.start(0);
-		oscillator2.stop(0.1);
+	  	oscillator.frequency.value = 44; // value in hertz
+	  	gain.gain.value = 0.3;
 
 	  }  
+	}
+
+
+	function offSound () {
+	  gain.gain.value = 0;
 	}
 
 
@@ -149,6 +151,16 @@ var blocky =
 
 	    dt = dt/3;
 		x += dx * dt;
+
+		if (sound_duration > 1){
+			sound_duration -= 1;
+		}
+		else
+		{
+			offSound ();	
+		}
+
+
 		screen();
 		reset_collision();
 	  
@@ -284,6 +296,7 @@ var blocky =
 
         if (get_collision(P0, P1) == 1){
             playSound(2);
+            sound_duration = 5; 
             retries += 1
             vel_y = 0
             pos_x = 0
@@ -295,6 +308,7 @@ var blocky =
 
 	    if (get_collision(P0, M1) == 1){
 	        playSound(2);
+	        sound_duration = 5; 
 	        retries += 1;
 	        vel_y = 0;
 	        pos_x = 0;
@@ -310,6 +324,7 @@ var blocky =
 
 	    if (get_collision(P0, PF) == 1){
 	        playSound(2);
+	        sound_duration = 5; 
 	        retries += 1;
 	        vel_y = 0;
 	        pos_x = 0;
@@ -328,7 +343,8 @@ var blocky =
 	        fire0 = false;
 	        if (vel_x > 0){
 	            if (jumping == 0){
-	                playSound(1);                      
+	                playSound(1); 
+	                sound_duration = 5;                     
 	                jumping = 1;
 	                vel_y = 180 * direction0;
 	            }
