--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@ var blocky =
 
 	var spacePressed = false;
 
-
 	var field_width = 12;
 	var NUM_LEVELS = 30;
 
@@ -76,67 +75,60 @@ var blocky =
 
 	var sound_duration = 0;
 
-
 	// create web audio api context
 	var audioCtx = new (window.AudioContext || window.webkitAudioContext)();
 
-	var oscillator;
-	var gain;
+	var oscillator1;
+	var gain1;
 
-		oscillator = audioCtx.createOscillator();
-		gain = audioCtx.createGain();
+	var oscillator2;
+	var gain2;
 
-		oscillator.type = 'square';
-		gain.gain.value = 0.0;
+		oscillator1 = audioCtx.createOscillator();
+		gain1 = audioCtx.createGain();
+
+		oscillator2 = audioCtx.createOscillator();
+		gain2 = audioCtx.createGain();
+
+		oscillator1.type = 'square';
+		gain1.gain.value = 0.0;
+		oscillator1.frequency.value = 440; // value in hertz
+
+		oscillator2.type = 'square';
+		gain2.gain.value = 0.0;
+		oscillator2.frequency.value = 44; // value in hertz
 		
-		oscillator.frequency.value = 440; // value in hertz
-		oscillator.connect(gain);
-		gain.connect(audioCtx.destination);
+		oscillator1.connect(gain1);
+		gain1.connect(audioCtx.destination);
 
-		oscillator.start(0);
+		oscillator2.connect(gain2);
+		gain2.connect(audioCtx.destination);
+
+		oscillator1.start(0);
+		oscillator2.start(0);
 
 	function playSound (snum) {
 	  if (snum == 1){
-
-
-	  	oscillator.frequency.value = 440; // value in hertz
-	  	gain.gain.value = 0.3;
-		
-
+	  	gain1.gain.value = 0.3;
 	  }
 	  if (snum == 2){
-
-
-
-	  	oscillator.frequency.value = 44; // value in hertz
-	  	gain.gain.value = 0.3;
-
+	  	gain2.gain.value = 0.3;
 	  }  
 	}
 
-
 	function offSound () {
-	  gain.gain.value = 0;
+	  gain1.gain.value = 0;
+	  gain2.gain.value = 0;
 	}
 
-
-
 	document.addEventListener('keydown', keyDownHandler, false);
-
-
     document.body.addEventListener('touchstart', keyDownHandler, false);
-
-
 	document.body.addEventListener('click', keyDownHandler, false);
-
- 
 
 	function keyDownHandler(e) {
 	     fire0 = true;
 	
 	}
-
-
 
 	function draw() {
 	    // drawing code
@@ -164,7 +156,6 @@ var blocky =
 		screen();
 		reset_collision();
 	  
-
 	    background(0, SCREEN_Y, color_bk1);
 	    background(SCREEN_Y/2 - field_width, 2* field_width, color_bk2);
 
@@ -206,7 +197,6 @@ var blocky =
 	        direction0 = 1.0;
 	    }
 
-
 	    if (pos_x > (SCREEN_X + 7)*50){
 	        level_number += 1;
 	        if (level_number > NUM_LEVELS){
@@ -245,7 +235,6 @@ var blocky =
 	        missile0(152, SCREEN_Y/2 + field_width, 8, 1, color_p0);   
 	    }
 
-
 	    if (fire == 0){
 	        fire = 1;
 	        fire_x = 152 * 50;
@@ -272,7 +261,6 @@ var blocky =
 
 	    print_large(28, 2, '-30', color_p0);
 
-
 	    //# Start screen
 	    if ((vel_x == 0) && (level_number == 1)){
 	        vel_x = 0;
@@ -292,7 +280,6 @@ var blocky =
 	        print_large(2, 2+16, '   YOU', color_p0);
 	        print_large(2, 2+24,  ' DID IT!', color_p0);
 	    }
-
 
         if (get_collision(P0, P1) == 1){
             playSound(2);
@@ -352,7 +339,6 @@ var blocky =
 	        else{
 	            vel_x = 240;
 	        }
-
 	    }
 		
 	    requestAnimationFrame(draw);
