--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ var blocky =
 	        vel_y = 0;
 	        pos_x = 0 ;
 	        pos_y = (SCREEN_Y/2 + field_width) * 50 ;
-	        print_large(2, 2+16, '  SPACE', color_p0);
+	        print_large(2, 2+16, '   TAP', color_p0);
 	        print_large(2, 2+24, ' TO START', color_p0);
 	    }
 
