--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ var blocky =
 	    		game_state = PLAYING;
 	    	}
 		}
-		if (key == 19){
+		if ((key == 19) || (key == 197){
 			if (game_state == PLAYING){
 	    		onPause();
 	    	}
