--- a/pitfall.html
+++ b/pitfall.html
@@ -340,14 +340,11 @@ var nem_color = [
         // draw tree trunks
         playfield(65, 52, tree_trunk, TRUNK_COLOR);
 
-		print_small(2, 8,  '       0000        ', 2, LETTERING_COLOR)
+		print_small(2, 8,  '       2000        ', 2, LETTERING_COLOR)
 
         var p_width = Math.trunc(window.innerWidth / SCREEN_X / INTERLACE),
         p_height = Math.trunc(window.innerHeight / SCREEN_Y);
 
-
-		number_small(2, 16, p_width, 1, LETTERING_COLOR);
-        number_small(30, 30, SHIRT_COLOR, 1, LETTERING_COLOR);
 
 		for (i = 0; i < 21; i++){
 			player1(18, 104 + game_number*14+i, nemesis.slice(i,i+1), 1, nem_color[i]);
@@ -358,7 +355,12 @@ var nem_color = [
         player1(86, 59, branch3, 1, TRUNK_COLOR);
         player1(118, 59, branch4, 1, TRUNK_COLOR);
 
-        print_small(2, 190,  'XXX ', 1, LETTERING_COLOR)
+        print_small(12, 190,  'ABC ', 1, LETTERING_COLOR)
+
+
+        ball(0, 0, 8, SCREEN_Y, DARKESS_COLOR);
+
+
 		requestAnimationFrame(draw);
 }
 
